Fix github badge blinking on desktop Fix github badge not display on mobile

--- a/themes/plakarium/assets/css/main-compiled.css
+++ b/themes/plakarium/assets/css/main-compiled.css
@@ -2017,6 +2017,14 @@ video {
   width: max-content;
 }
 
+.min-w-\[3ch\] {
+  min-width: 3ch;
+}
+
+.min-w-\[4ch\] {
+  min-width: 4ch;
+}
+
 .\!max-w-none {
   max-width: none !important;
 }
